    when building shared libraries or FASL files.

  - HASH-TABLE-SIZE and HASH-TABLE-TEST have been finally implemented.

  - The configuration process now does respect the values of libdir,
    bindir, infodir,... supplied by the user.

  - SLOT-EXISTS-P now works with all types of objects.

  - LCM now works when any of the arguments is 0.

  - SIGNUM now accepts complex arguments.

* Documentation:

  - New manual page documents the scripting facilities of ECL
    (contributed by Julian St.)

* Visible changes:

  - New command line options -shell and -norc, which are useful for
    scripting. New and more robust handling of command line options,
    permits combining (and repeating) the options -load, -eval, -shell
    in a number of ways.

  - SI:FILE-COLUMN now always returns a number, which may be 0 for
    streams that do not have that information.

  - The compiler (COMPILE-FILE, COMPILE, etc), now understands
    logical pathnames.

  - Under windows, the system directory is defined to be the place
    where ecl.exe resides. Windows user will want to use the
    command "make windows-dist", which builds a ZIP file with a
    ready to be installed ECL.

  - If you want to install ECL to a different place, use "make prefix=..."
    instead of the old form "make PREFIX=...". ECL now follows the GNU
    coding standards in this particular point.

  - The script "ecl-config" now returns only the essential flags to compile a
    file that links against ECL. It does not include optimization flags, or
    flags to create position independent object files.

* ANSI compatibility:

  - No symbol is exported from the CL package other than those specificied in
    the standard. ECL extensions, such as the types BYTE8, UNSIGNED-BYTE8,
    are now in the package EXT (which is temporarily an alias of SYSTEM).

  - The following functions have been implemented: BROADCAST-STREAM-STREAMS,
    {ECHO,TWO-WAY}-STREAM-{INPUT,OUTPUT}-STREAM, FILE-STRING-LENGTH,