@@ -645,12 +645,12 @@ cl_symbols[] = {
 {"PARSE-INTEGER", CL_ORDINARY, cl_parse_integer, -1, OBJNULL},
 {"PARSE-NAMESTRING", CL_ORDINARY, cl_parse_namestring, -1, OBJNULL},
 {"PATHNAME", CL_ORDINARY, cl_pathname, 1, OBJNULL},
-{"PATHNAME-DEVICE", CL_ORDINARY, cl_pathname_device, 1, OBJNULL},
-{"PATHNAME-DIRECTORY", CL_ORDINARY, cl_pathname_directory, 1, OBJNULL},
-{"PATHNAME-HOST", CL_ORDINARY, cl_pathname_host, 1, OBJNULL},
+{"PATHNAME-DEVICE", CL_ORDINARY, cl_pathname_device, -1, OBJNULL},
+{"PATHNAME-DIRECTORY", CL_ORDINARY, cl_pathname_directory, -1, OBJNULL},
+{"PATHNAME-HOST", CL_ORDINARY, cl_pathname_host, -1, OBJNULL},
 {"PATHNAME-MATCH-P", CL_ORDINARY, cl_pathname_match_p, 2, OBJNULL},
-{"PATHNAME-NAME", CL_ORDINARY, cl_pathname_name, 1, OBJNULL},
-{"PATHNAME-TYPE", CL_ORDINARY, cl_pathname_type, 1, OBJNULL},
+{"PATHNAME-NAME", CL_ORDINARY, cl_pathname_name, -1, OBJNULL},
+{"PATHNAME-TYPE", CL_ORDINARY, cl_pathname_type, -1, OBJNULL},
 {"PATHNAME-VERSION", CL_ORDINARY, cl_pathname_version, 1, OBJNULL},
 {"PATHNAMEP", CL_ORDINARY, cl_pathnamep, 1, OBJNULL},
 {"PEEK-CHAR", CL_ORDINARY, cl_peek_char, -1, OBJNULL},
@@ -1236,6 +1236,7 @@ cl_symbols[] = {
 {KEY_ "CATCHALL", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "CIRCLE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "COMPILE-TOPLEVEL", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "COMMON",KEYWORD,NULL,-1,OBJNULL},
 {KEY_ "CONTROL-STRING", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "CREATE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "DATUM", KEYWORD, NULL, -1, OBJNULL},
@@ -1274,6 +1275,7 @@ cl_symbols[] = {
 {KEY_ "LEVEL", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "LINK", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "LIST-ALL", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "LOCAL",KEYWORD,NULL,-1,OBJNULL},
 {KEY_ "LOCKABLE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "LOAD-TOPLEVEL", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "NAME", KEYWORD, NULL, -1, OBJNULL},
