@@ -988,11 +988,11 @@ extern void unuse_package(cl_object x0, cl_object p);
 extern cl_object cl_pathname(cl_object name);
 extern cl_object cl_logical_pathname(cl_object pname);
 extern cl_object cl_pathnamep(cl_object pname);
-extern cl_object cl_pathname_host(cl_object pname);
-extern cl_object cl_pathname_device(cl_object pname);
-extern cl_object cl_pathname_directory(cl_object pname);
-extern cl_object cl_pathname_name(cl_object pname);
-extern cl_object cl_pathname_type(cl_object pname);
+extern cl_object cl_pathname_host _ARGS((int narg, cl_object pname, ...));
+extern cl_object cl_pathname_device _ARGS((int narg, cl_object pname, ...));
+extern cl_object cl_pathname_directory _ARGS((int narg, cl_object pname, ...));
+extern cl_object cl_pathname_name _ARGS((int narg, cl_object pname, ...));
+extern cl_object cl_pathname_type _ARGS((int narg, cl_object pname, ...));
 extern cl_object cl_pathname_version(cl_object pname);
 extern cl_object cl_namestring(cl_object pname);
 extern cl_object cl_file_namestring(cl_object pname);
